[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/simplePlayer.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/Themes/totalmeat.tres" type="Theme" id=3]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00001.tres" type="Texture" id=4]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00015.tres" type="Texture" id=5]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00000.tres" type="Texture" id=6]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00017.tres" type="Texture" id=7]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00008.tres" type="Texture" id=8]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00006.tres" type="Texture" id=9]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00013.tres" type="Texture" id=10]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00016.tres" type="Texture" id=11]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00011.tres" type="Texture" id=12]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00007.tres" type="Texture" id=13]
[ext_resource path="res://Scenes/Dash.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/UI/playerHunger.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00012.tres" type="Texture" id=16]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00014.tres" type="Texture" id=17]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00003.tres" type="Texture" id=18]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00002.tres" type="Texture" id=19]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00010.tres" type="Texture" id=20]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00004.tres" type="Texture" id=21]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00005.tres" type="Texture" id=22]
[ext_resource path="res://Assets/testsheet.sprites/animals.sprites/try_new - Run cycle_00009.tres" type="Texture" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "running",
"speed": 30.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "invincibility"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="simplePlayer" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 257
script = ExtResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="."]
visible = false
z_index = 10
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_bottom = 1080
limit_smoothed = true

[node name="RichTextLabel" type="Label" parent="."]
visible = false
margin_left = -10.0
margin_top = -98.0
margin_right = 96.0
margin_bottom = -34.0
theme = ExtResource( 3 )
text = "FPS"

[node name="RichTextLabel2" type="Label" parent="."]
visible = false
margin_left = 43.0
margin_top = -32.0
margin_right = 149.0
margin_bottom = 32.0
theme = ExtResource( 3 )
text = "state"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( -11, 5 )
scale = Vector2( 0.5, 0.5 )
z_index = 10
frames = SubResource( 2 )
animation = "running"
frame = 7
playing = true
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/invincibility = SubResource( 3 )

[node name="invulTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Dash" parent="." instance=ExtResource( 14 )]

[node name="hungerTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="playerHunger" parent="." instance=ExtResource( 15 )]
visible = false

[connection signal="timeout" from="invulTimer" to="." method="_on_invulTimer_timeout"]
[connection signal="timeout" from="hungerTimer" to="." method="_on_hungerTimer_timeout"]
